--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,9 @@
 {cover_enabled, true}.
-{erl_opts, [warnings_as_errors, {parse_transform, lager_transform}]}.
+{erl_opts, [{parse_transform, lager_transform}]}.
 {eunit_opts, [verbose]}.
 {deps, [
-        {riak_pb, "2.0.0.16", {git, "git://github.com/basho/riak_pb.git", {tag, "2.0.0.16"}}},
-%        {webmachine, "1.10.5", {git, "git://github.com/basho/webmachine.git", {tag, "1.10.5"}}},
-        {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {branch, "2.0"}}}
+        {riak_pb, ".*", {git, "git://github.com/riak-synrc/riak_pb.git", {tag, "master"}}},
+        {riak_core, ".*", {git, "git://github.com/riak-synrc/riak_core.git", {tag, "master"}}}
         ]}.
 
 {xref_checks, [undefined_function_calls]}.
